--- a/4enfila/style.css
+++ b/4enfila/style.css
@@ -4,7 +4,15 @@ body{
     background: url('./assets/fnd.jpg');
 }
 .canvasGame{
+    z-index: 1;
+    position: absolute;
     margin-top: 0vw;
+}
+.container{
+  position: relative;
+}
+.btnReset{
+  position: absolute;
 }
 .turn{
     user-select: none;
@@ -17,12 +25,27 @@ body{
     font-weight: normal;
     line-height: 48px;
     margin: 0;
+    width: 13vw;
+    height: 10vw;
+    z-index: -1;
+}
+.textP{
+  float: left;
+}
+.imgText{
+  float: right;
 }
 .show{
-    display: inline-block;
+    visibility: visible;
 }
 .hide{
-    display: none;
+    visibility: hidden;
+}
+.showFicha{
+  display: inline-block;
+}
+.hideFicha{
+  display: none;
 }
 .pyro > .before, .pyro > .after {
     position: absolute;
