--- a/animationSpreadSheet/style.css
+++ b/animationSpreadSheet/style.css
@@ -3,13 +3,16 @@
     width: 400px;
     background : url('./michi.png') left center;
     animation: walk 0.8s steps(12) infinite;
-    
 }
 .rojo{
     width: 400px;
     height: 300px;
     background-color: red;
     animation: spin 0.8s linear infinite;
+    transition: 1s;
+}
+.rojo:hover{
+    animation: spin 0.8s ease-in infinite;
 }
 @keyframes spin{
     0%{
