entregable casi listo

--- a/Entregable3/Entregable/style.css
+++ b/Entregable3/Entregable/style.css
@@ -1,8 +1,9 @@
-
+html{
+  overflow:hidden;
+}
 body {
     background: #000;
     margin: 0;
-    padding: 0;
     font-size: 26px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: #ffffff;
@@ -10,6 +11,7 @@ body {
     perspective: 1px;
     transform-style: preserve-3d;
     overflow-x:hidden;
+    overflow-y:auto;
 }
 .hide{
   display: none;
@@ -28,9 +30,29 @@ body {
     height: 100vh;
     top:0;
     left:0;
+    background-image: url('./assets/background.jpg');
     position: absolute;
     z-index: -1;
-    transform:translateZ(-10px) scale(2);
+    transform:translateZ(-1px) scale(2);
+}
+.parallax-wrapper2 {
+  margin-top: 5%;
+  width: 100vw;
+  height:150vh;
+  box-sizing: border-box;
+  transform-style: preserve-3d;
+}
+.parallax-wrapper2::before {
+  content:"";
+  width: 100vw;
+  height:150vh;
+  top:0;
+  left:0;
+  background-image: url('./assets/background-starStrooper.jpg');
+  background-size: 100% 100%;
+  position: absolute;
+  z-index: 0;
+  transform:translateZ(-1px) scale(2);
 }
 .regular-wrapper {
     width: 100vw;
@@ -44,8 +66,11 @@ body {
     margin: 0 auto;
     padding: 50px;
     width: 50%;
-    background: #aaa;
+    background: url('./assets/star-wars-background.jpg');
+    background-size: 100% 100%;
+    text-align: center;
 }
+
 #menuToggle{
     display: block;
     position: relative;
@@ -54,6 +79,21 @@ body {
     z-index: 1;
     -webkit-user-select: none;
     user-select: none;
+    animation: menuToggle 1s ease-out 1;
+  }
+  @keyframes menuToggle{
+    0%{
+      transform: translateX(-10em);
+    }
+    50%{
+      transform: translateX(0);
+    }
+    75%{
+      transform: translateX(-1em);
+    }
+    100%{
+      transform: translateX(0);
+    }
   }
   #menuToggle a{
     text-decoration: none;
@@ -137,10 +177,21 @@ body {
   .divider {
     display: flex;
     position: inherit;
-    top: -25%;
+    top: -24%;
     z-index: 10;
     filter: blur(1px);
  }
+ .divider2 {
+  display: flex;
+  position: inherit;
+  top: 42%;
+  z-index: 10;
+  filter: blur(1px);
+ }
+ .divider2:before, .divider2:after {
+  content: "";
+  flex: 1;
+}
   .divider:before, .divider:after {
     content: "";
     flex: 1;
@@ -206,7 +257,7 @@ body {
   height: 17em;
   left: 50%;
   position: absolute;
-  top: 53%;
+  top: 45%;
   transform: translate(-50%, -50%);
   width: 34em;
   perspective: 800px;
@@ -294,7 +345,7 @@ img {
   font-size: 30px;
 }
 .text span::before{
-  content: 'LOADING';
+  content: 'CARGANDO';
   display: inline-block;
   width: 140px;
   height: 30px;
@@ -518,5 +569,184 @@ img {
       transform: translateX(-110%);
   }
 }
+#headLine {
+  font-weight: normal;
+  letter-spacing: .125rem;
+  text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
+             0px 8px 13px rgba(0,0,0,0.1),
+             0px 18px 23px rgba(0,0,0,0.1);
+  text-transform: uppercase;
+}
+.liCountdown {
+  display: inline-block;
+  text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
+             0px 8px 13px rgba(0,0,0,0.1),
+             0px 18px 23px rgba(0,0,0,0.1);
+  font-size: 1em;
+  list-style-type: none;
+  padding: 1em;
+  text-transform: uppercase;
+}
 
-
+.liCountdown span {
+  display: block;
+  font-size: 4.5rem;
+}
+#main-container {
+  margin: 50px auto;
+  width: 100%;
+  perspective: 900px;
+}
+.charactersTitle {
+  text-align: center;
+}
+#movie-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.movie-card {
+  border-radius: 5px;
+  box-shadow: -1px 1px 8px #828282, 1px -1px 8px #828282;
+  margin: 60px;
+  background: #fff;
+  color: #000;
+  transition-duration: 300ms;
+  transform: rotateX(45deg) scale(0.7);
+}
+.movie-card img {
+  transition-duration: 300ms;
+  border-radius: 5px 5px 0 0;
+  height: 400px;
+  filter: brightness(50%);
+  width: 350px;
+}
+.movie-card .desc {
+  padding: 0 1rem;
+}
+.movie-card:hover {
+  transform: rotate(0deg) scale(1);
+  transition: .5s all ease;
+  background-color: #bdbdbd;
+  box-shadow: -1px 1px 10px 1px #828282, 1px -1px 10px 1px #828282;
+}
+.movie-card:hover img {
+  filter: none;
+}
+/* Carrousel */
+.carrouselContainer{
+  display: flex;
+  justify-content: center;
+}
+.carrouselTitle{
+  margin-top: -1.6%;
+  text-align: center;
+  margin-bottom: 5%;
+}
+.icon-cards {
+  position: relative;
+  width: 60vw;
+  height: 40vw;
+  max-width: 380px;
+  max-height: 250px;
+  margin: 0;
+  color: white;
+  perspective: 1000px;
+  transform-origin: center;
+}
+.icon-cards__content {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  transform-origin: center;
+  transform-style: preserve-3d;
+  transform: translateZ(-30vw) rotateY(0);
+  animation: carousel 10s infinite cubic-bezier(0.77, 0, 0.175, 1) forwards;
+}
+.icon-cards__content.step-animation {
+  animation: carousel 8s infinite steps(1) forwards;
+}
+.icon-cards__item {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 60vw;
+  height: 40vw;
+  max-width: 30vw;
+  max-height: 20vw;
+  box-shadow: 0 5px 20px rgba(0, 0, 0, .1);
+  border-radius: 6px;
+  background-size: 100% 100%;
+  transform-origin: center;
+}
+.icon-cards__item:nth-child(1) {
+  background-image: url('./assets/guerra.jpg');
+  transform: rotateY(0) translateZ(35vw);
+}
+.icon-cards__item:nth-child(2) {
+  background-image: url('./assets/lukeVSkyloRen.jpg');
+  transform: rotateY(120deg) translateZ(35vw);
+}
+.icon-cards__item:nth-child(3) {
+  background-image: url('./assets/phasma.jpeg');
+  transform: rotateY(240deg) translateZ(35vw);
+}
+@keyframes carousel {
+  0%, 17.5% {
+      transform: translateZ(-35vw) rotateY(0);
+ }
+  27.5%, 45% {
+      transform: translateZ(-35vw) rotateY(-120deg);
+ }
+  55%, 72.5% {
+      transform: translateZ(-35vw) rotateY(-240deg);
+ }
+  82.5%, 100% {
+      transform: translateZ(-35vw) rotateY(-360deg);
+ }
+}
+/*navbar*/
+.menu-bar {
+  position: fixed;
+  border-radius: 25px;
+  z-index: 3;
+  height: fit-content;
+  display: inline-flex;
+  background-color: rgba(0, 0, 0, .4);
+  align-items: center;
+  padding: 0 10px;
+  margin-top: 1vh;
+  margin-left: 43vw;
+}
+.menu-bar li {
+  list-style: none;
+  color: white;
+  font-family: sans-serif;
+  font-weight: bold;
+  padding: 12px 16px;
+  margin: 0 8px;
+  position: relative;
+  cursor: pointer;
+  white-space: nowrap;
+}
+.menu-bar li::before {
+  content: " ";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+  transition: 0.2s;
+  border-radius: 25px;
+}
+.menu-bar li:hover {
+  color: black;
+}
+.menu-bar li:hover::before {
+  background: linear-gradient(to bottom, #e8edec, #d2d1d3);
+  box-shadow: 0px 3px 20px 0px black;
+  transform: scale(1.2);
+}
