--- a/Entregable3/Entregable/form.css
+++ b/Entregable3/Entregable/form.css
@@ -92,25 +92,6 @@ textarea {
     max-width: 100%;
     margin: 20px auto 25px auto;
 }
-
-.submit-btn {
-    float: right;
-    padding: 7px 35px;
-    border-radius: 60px;
-    background-color: #4b8cfb;
-    color: white;
-    font-size: 18px;
-    cursor: pointer;
-    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.06),
-              0 2px 10px 0 rgba(0,0,0,0.07);
-    transition: all 300ms ease;
-    animation: 1.5s ease-out 1 slideInFromLeft;
-}
-
-.submit-btn:hover {
-    transform : scaleX(1.2);
-}
-
 input[type=checkbox] + label {
   color: #ccc;
   font-style: italic;
@@ -261,7 +242,6 @@ input[type=checkbox]:checked + label {
     padding-top: 125px;
     background: #ededed;
     list-style-type: none;
-    -webkit-font-smoothing: antialiased;
     transform-origin: 0% 0%;
     transform: translate(-100%, 0);
     transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
@@ -526,3 +506,56 @@ input[type=checkbox]:checked + label {
   .hide{
     display: none;
   }
+  
+ @keyframes short-press {
+  0% {
+    transform: scale(1);
+ }
+  50% {
+    transform: scale(0.9);
+ }
+  100% {
+    transform: scale(1);
+ }
+}
+.hide {
+  display: none;
+}
+.submit-button {
+  display: block;
+  font-weight: 600;
+  text-transform: uppercase;
+  font-size: 0.75em;
+  letter-spacing: 1px;
+  height: 38px;
+  width: 120px;
+  line-height: 38px;
+  overflow: hidden;
+  background: lightblue;
+  border-radius: 3px;
+  box-shadow: 0 15px 30px rgba(0, 0, 0, .1);
+  border: 0;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+.submit-button:hover{
+  transform: scaleX(1.1);
+}
+.submit-button.animated {
+  animation: 0.75s short-press cubic-bezier(0.77, 0, 0.175, 1) forwards;
+}
+.submit-button > span {
+  display: block;
+  color: white;
+  text-align: center;
+}
+.submit-button > span.pre-state-msg {
+  transition: all 0.7s cubic-bezier(0.77, 0, 0.175, 1);
+  transition-delay: 0.75s;
+}
+.submit-button.state-1 .pre-state-msg {
+  margin-top: -38px;
+}
+.submit-button.state-2 .pre-state-msg {
+  margin-top: -76px;
+}
