--- a/Entregable3/Entregable/style.css
+++ b/Entregable3/Entregable/style.css
@@ -595,7 +595,7 @@ img {
 #main-container {
   margin: 50px auto;
   width: 100%;
-  perspective: 900px;
+  perspective: 100rem;
 }
 .charactersTitle {
   text-align: center;
